--- a/mod3_solution/styles.css
+++ b/mod3_solution/styles.css
@@ -1,6 +1,79 @@
+
 /*Header style*/
 #header-nav{
 	background-color: #BEBEBE;
 	border-radius: 0;
-	border:0;
+	height: 50px;
+	border:1px solid black;
+	
 }
+
+.navbar-brand h1{
+	font-size: 1.5em;
+	font-weight: bold;
+	text-shadow: 1px 1px 1px #222;
+	margin-top: 0;
+	margin-bottom: 0;
+	line-height: .75;
+	text-align: left;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.navbar-header{
+	border: 2px;
+}
+
+.row{
+	width:100%;
+}
+.box{
+	text-align: center;
+	font-weight: bold;
+	font size:15px;
+	height: 50px;
+	width:100%;
+	padding: 10px;
+	margin: 0;
+	border: 2px solid black;
+	float: left;
+	
+
+}
+
+h1{
+	font-weight: bold;
+	font-family: Helvatica;
+	font-size: 40px;
+	padding:10px;
+	margin-top:10px;
+	
+  }
+section h2{
+	position: relative;
+    text-align: center;
+    font-size: 20px;
+    bottom: 10px;
+    font-weight: bold;
+   }
+section{
+  background-color: #BEBEBE;
+  font-size: 16px;
+  padding: 35px;
+  border: 2px solid black;
+  margin: 30px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  overflow: scroll;
+ 
+
+  }
+
+@media(min-width: 768px){
+	button.navbar-toggler{
+		display: none;
+	}
+}
+  
+
